# NetworkManager-libreswan

./: .clang-format  .gitignore  .gitlab-ci.yml  .packit.yaml  AUTHORS  ChangeLog  Makefile.am  NEWS  NetworkManager-libreswan.doap  README  autogen.sh  configure.ac  network-manager-libreswan.doap  network-manager-openswan.doap  nm-libreswan-service.conf  nm-libreswan-service.name.in  nm-openswan-service.conf  nm-openswan-service.name.in  nm-openswan.desktop.in  zanata.xml
appdata/: network-manager-libreswan.metainfo.xml.in
auth-dialog/: Makefile.am  gnome-two-password-dialog.c  gnome-two-password-dialog.h  main.c  nm-libreswan-auth-dialog.desktop.in.in  nm-openswan-auth-dialog.desktop.in.in  vpn-password-dialog.c  vpn-password-dialog.h
common/: Makefile.am  utils.c  utils.h
common-gnome/: Makefile.am  keyring-helpers.c  keyring-helpers.h
man/: Makefile.am  nm-settings-libreswan.5.in
po/: ChangeLog  LINGUAS  NetworkManager-libreswan.pot  POTFILES.in  POTFILES.skip  ar.po  bg.po  bs.po  ca.po  cs.po  da.po  de.po  dz.po  el.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  fur.po  gl.po  gu.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  mk.po  mr.po  nb.po  nl.po  oc.po  or.po  pa.po  (+18 more)
properties/: Makefile.am  gresource.xml  libnm-vpn-plugin-libreswan-editor.ver  nm-libreswan-dialog.ui  nm-libreswan-editor-plugin.c  nm-libreswan-editor-plugin.h  nm-libreswan-editor.c  nm-libreswan-editor.h  nm-libreswan.c  nm-libreswan.h  nm-openswan-dialog.glade  nm-openswan-dialog.ui  nm-openswan.c  nm-openswan.h
shared/: Makefile.am  README  nm-default.h  nm-service-defines.h  test-utils.c  utils.c  utils.h
shared/nm-utils/: nm-glib.h  nm-macros-internal.h  nm-shared-utils.c  nm-shared-utils.h  nm-vpn-plugin-macros.h  nm-vpn-plugin-utils.c  nm-vpn-plugin-utils.h
src/: Makefile.am  nm-libreswan-helper-service.xml  nm-libreswan-service-helper.c  nm-libreswan-service.c  nm-libreswan-service.h  nm-openswan-service-helper.c  nm-openswan-service.c  nm-openswan-service.h  show-xfrm.c
